--- a/ai-agent.html
+++ b/ai-agent.html
@@ -184,8 +184,8 @@
     // CONFIGURATION
     // ============================================================
     
-    const PYTHON_API = 'http://localhost:5001';  // Python langextract service
-    const NODE_API = 'http://localhost:3001/api';  // Node.js backend for terminal
+    const PYTHON_API = 'http://127.0.0.1:5001';  // Python langextract service
+    const NODE_API = 'http://127.0.0.1:5001';  // Node.js backend for terminal
 
     // ============================================================
     // PYDANTIC-STYLE SCHEMA DEFINITIONS (JavaScript mirrors Python)
