--- a/ai-agent.html
+++ b/ai-agent.html
@@ -184,8 +184,8 @@
     // CONFIGURATION
     // ============================================================
     
-    const PYTHON_API = 'http://127.0.0.1:5001';  // Python langextract service
-    const NODE_API = 'http://10.0.5.186:5001';  // Node.js backend for terminal
+    const PYTHON_API = 'https://www.pythonanywhere.com/user/domsimone/consoles/45393356/';  // Python langextract service
+    const NODE_API = 'https://www.pythonanywhere.com/user/domsimone/consoles/45393356/';  // Node.js backend for terminal
 
     // ============================================================
     // PYDANTIC-STYLE SCHEMA DEFINITIONS (JavaScript mirrors Python)
